# guideai

./:  MAXS:Meta-Adaptive_Exploration_with_LLM_Agents.md  .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  ACTION_REGISTRY_SPEC.md  ACTION_SERVICE_CONTRACT.md  AGENTS.md  AGENT_FINANCE.md  BEHAVIOR_SERVICE_CONTRACT.md  BUILD_TIMELINE.md  CI_CD_ALIGNMENT.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLIANCE_SERVICE_CONTRACT.md  Dockerfile.archive-audit  Dockerfile.core  Dockerfile.verify-hash-chain  INTERNAL_AUTH_GUIDE.md  LICENSE  MCP_SERVER_DESIGN.md  Metacognitive_reuse.txt  NORMALIZATION_SUMMARY.md  OAUTH_SUCCESS_SUMMARY.md  PRD.md  PRD_ALIGNMENT_LOG.md  PRD_NEXT_STEPS.md  PROGRESS_TRACKER.md  QUICK_REFERENCE.md  README.md  REPRODUCIBILITY_STRATEGY.md  RESEARCH_SERVICE_CONTRACT.md  RETRIEVAL_ENGINE_PERFORMANCE.md  SAFE_TEST_COMMANDS.md  SECRETS_MANAGEMENT_PLAN.md  SECURITY.md  SERVICE_PARITY_AUDIT.md  SERVICE_PARITY_AUDIT_OLD.md  (+32 more)
.github/: CODEOWNERS  CONTRIBUTING.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.serena/: project.yml
agents/: AGENT_ACCESSIBILITY.md  AGENT_AI_RESEARCH.md  AGENT_COPYWRITING.md  AGENT_DATA_SCIENCE.md  AGENT_DEVOPS.md  AGENT_PRODUCT.md
dashboard/: index.html  package-lock.json  package.json
data/: telemetry_sqlite.db
deployment/: .gitkeep  CICD_DEPLOYMENT_GUIDE.md  CICD_TEST_STATUS.md  CONTAINER_COMPARISON.md  Dockerfile.core  Dockerfile.core.simple  Dockerfile.mcp  HORIZONTAL_SCALING_IMPLEMENTATION.md  HORIZONTAL_SCALING_IMPLEMENTATION_COMPLETE.md  HORIZONTAL_SCALING_IMPLEMENTATION_SUMMARY.md  HYBRID_FLINK_ARCHITECTURE.md  HYBRID_FLINK_IMPLEMENTATION_SUMMARY.md  HYBRID_KAFKA_STREAMING_PIPELINE.md  PODMAN.md  PODMAN_SCALING_CONFIGURATION.md  QUICKSTART.md  README.md  SCALING_DEPLOYMENT_SCRIPTS.md  STAGING_DEPLOYMENT_GUIDE.md  podman-compose-scaled.yml  podman-compose-staging.yml  staging.env
docs/: AGENT_AUTH_ARCHITECTURE.md  AGENT_OSS_ENTERPRISE_GUIDE.md  AMPREALIZE_PRD.md  ARIZE_INTEGRATION_PLAN.md  BCI_IMPLEMENTATION_SPEC.md  BEHAVIOR_VERSIONING.md  BRIEF_PROJECT.md  BRIEF_SETUP.md  CAPABILITY_MATRIX_UPDATE_2025-10-16.md  COLLAB_SAAS_REQUIREMENTS.md  COMPLIANCE_CONTROL_MATRIX.md  CONSENT_UX_PROTOTYPE.md  CONVERSATION_SYSTEM_PLAN.md  COST_ALERT_RUNBOOK.md  COST_MODEL.md  CROSS_IDE_TESTING_FRAMEWORK.md  CROSS_SURFACE_CONSISTENCY_COMPLETE.md  CROSS_SURFACE_CONSISTENCY_REPORT.md  CURSOR_EXTENSION_DEVELOPMENT_RESEARCH.md  DAILY_EXPORT_AUTOMATION.md  DAILY_EXPORT_AUTOMATION_TEST_RESULTS.md  DATABASE_CONSOLIDATION_PLAN.md  DEVICE_FLOW_GUIDE.md  DISASTER_RECOVERY_POLICY.md  EMBEDDING_ROLLBACK_RUNBOOK.md  ENTERPRISE_MODULE_MIGRATION_ANALYSIS.md  ENTERPRISE_OSS_COUPLING.md  EPIC_8_12_COST_OPTIMIZATION.md  GATEWAY_ARCHITECTURE.md  GITHUB_OAUTH_SETUP.md  GIT_STRATEGY.md  GUIDEAI_DOMAIN_EXPERTISE_PRODUCT_STRATEGY.md  GUIDEAI_KNOWLEDGE_PACK_ARCHITECTURE.md  INSTALLATION_AND_REPO_OPTIMIZATION_PLAN.md  INTERNAL_AUTH_GUIDE.md  INVITATION_SERVICE_CONTRACT.md  KNOWLEDGE_PACK_VERSIONING.md  LOAD_TEST_RESULTS.md  MARKETPLACE_SUBMISSION_AUTOMATION.md  MCP_AUTH_IMPLEMENTATION_PLAN.md  (+49 more)
examples/: test_mcp_server.py  validate_metrics.py
extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  MVP_COMPLETE.md  README.md  package-lock.json  package.json  tsconfig.json
guideai/: __init__.py  action_capturability.py  action_contracts.py  action_registry.py  action_replay_executor.py  action_service.py  action_service_postgres.py  adapters.py  adherence_tracker.py  advanced_retrieval_contracts.py  advanced_retrieval_service.py  agent_auth.py  agent_execution_loop.py  agent_llm_client.py  agent_orchestrator_service.py  agent_orchestrator_service_postgres.py  agent_performance_contracts.py  agent_registry_contracts.py  agent_registry_service.py  agent_review_contracts.py  agent_review_service.py  api.py  api_rate_limiting_contracts.py  api_rate_limiting_service.py  auth_tokens.py  bci_contracts.py  bci_service.py  behavior_retriever.py  behavior_service.py  behavior_service_sqlite_backup.py  cli.py  cli_dr.py  collaboration_contracts.py  collaboration_service.py  collaboration_service_postgres.py  compliance_service.py  compliance_service_postgres.py  context.py  context_composer.py  context_resolver.py  (+59 more)
infra/: CONTAINER_RUNTIME_DECISION.md  README.md  docker-compose.postgres.yml  docker-compose.test.yml
migrations/: env.py  script.py.mako
migrations_telemetry/: __init__.py  env.py
migrations_workflow.archive/: env.py  script.py.mako
schema/: __init__.py
scripts/: README.md  _postgres_migration_utils.py  add_parent_id_column.py  advanced_cleanup.sh  agent_auth_cli_commands.py  archive_audit_logs.py  benchmark_embedding_models.py  benchmark_retrieval.py  build_task_updates.py  check_data.py  check_no_raw_truncate.sh  check_oss_version.py  cleanup_resources.sh  create_adr_work_items.py  create_behavior_workflow_story.py  create_metabase_dashboards.py  create_streaming_dashboards.py  daily_export_automation.py  dr_backup_duckdb.sh  dr_backup_postgres.sh  dr_backup_redis.sh  dr_restore_postgres.sh  dr_test_failover.sh  export_duckdb_to_sqlite.py  export_modules.sh  generate_mcp_tool_catalog.py  generate_postgres_migration_report.py  get_podman_socket.sh  init_duckdb_schema.py  inject_work_item_standard.py  install_hooks.sh  investigate_boards.py  investigate_boards2.py  investigate_boards3.py  license-header.txt  lightweight_load_test.py  manage_github_oauth.py  mcp_call.py  mcp_health_check.py  metabase_nuclear_cleanup.py  (+77 more)
scripts.archive/: _postgres_migration_utils.py  migrate_compliance_to_postgres.py  migrate_run_sqlite_to_postgres.py  run_postgres_agent_orchestrator_migration.py  run_postgres_auth_migration.py  run_postgres_metrics_migration.py  run_postgres_orchestrator_migration.py  run_postgres_telemetry_migration.py  sql_utils.py  validate_migration_009.py
tests/: conftest.py  test_action_capturability.py  test_action_parity.py  test_action_registry.py  test_action_replay_executor.py  test_action_service_parity.py  test_api.py  (+136 more)
tests.archive/: test_postgres_migration_utils.py
(+989 files in other folders)
